test/TestSuite/Scheduler/Errors/effort_no_allocations.tjp
project test "Test" "1.0" 2008-02-02 +1m

# MARK: error 4 effort_no_allocations
task t "T" {
  start ${projectstart}
  effort 2d
}
